Fixed off page content
During mobile view the top and bottom get cut off. Added height: 100% to fix along with padding for top and bottom to the body tag.

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -14,6 +14,7 @@ body{
    height: 100vh;
    background-color: var(--Red);
    @media #{$media-mobile} {
+      height: 100%;
       padding: 20px 0;
    }
 }
